# im_cloud

./: Cargo.toml  README.md  rustfmt.toml
app_api/: Cargo.toml  api-config.toml
app_api/src/: lib.rs  main.rs  result.rs
app_api/src/handlers/: auth_contoller.rs  auth_handler.rs  common_handler.rs  frend_handler.rs  friend_handler.rs  group_controller.rs  group_member_mute_controller.rs  message_handler.rs  mod.rs  socket_handler.rs  swagger.rs  user_contoller.rs  user_controller.rs  user_handler.rs
app_api/src/protocol/: common.rs  mod.rs  rpc_arb_server.rs
app_api/src/service/: arb_client.rs  mod.rs
app_arb/: Cargo.toml  arb-config.toml  build.rs
app_arb/proto/: arb_service.proto
app_arb/src/: main.rs
app_arb/src/protocol/: arbitration.rs  common.rs  mod.rs  protocol.arb_models.rs  protocol.rpc.rs  rpc_arb_group.rs  rpc_arb_models.rs  rpc_arb_server.rs  rpc_arb_socket.rs  rpc_group_service.rs
app_biz_message/: Cargo.toml
app_biz_message/src/: lib.rs
app_biz_message/src/entity/: mod.rs  off_line_message.rs
app_gateway_msg/: Cargo.toml  api-gateway-msg.toml
app_gateway_msg/src/: lib.rs  main.rs
app_gateway_msg/src/consts/: kafka_topic_cfg.rs  mod.rs
app_gateway_msg/src/entity/: mod.rs  online_message.rs
app_gateway_msg/src/protocol/: mod.rs
app_gateway_msg/src/service/: arb_client.rs  kafka_service.rs  mod.rs  online_message_service.rs
app_group/: Cargo.toml  build.rs  group-config.toml
app_group/proto/: models.proto  service.proto
app_group/src/: main.rs
app_group/src/biz_service/: group_member_service.rs  group_service.rs  kafka_service.rs  mod.rs
app_group/src/kafka/: kafka_consumer.rs  mod.rs
app_group/src/manager/: mod.rs  shard_job.rs  shard_job_impl.rs  shard_manager.rs  shard_manager_impl.rs  shard_manager_mq_impl.rs  shard_manager_opt_impl.rs
app_group/src/protocol/: arbitration.rs  common.rs  grpc.rs  mod.rs  rpc_arb_group.rs  rpc_arb_models.rs  rpc_arb_server.rs  rpc_arb_socket.rs  rpc_group_models.rs  rpc_group_service.rs
app_group/src/service/: mod.rs
app_group_message/: Cargo.toml
app_group_shard/: Cargo.toml  shard-config.toml
app_group_shard/src/: main.rs
app_group_shard/src/db/: hash_shard_map.rs  intern_pool.rs  mod.rs
app_group_shard/src/error/: member_list_error.rs  mod.rs
app_group_shard/src/service/: arb_manager.rs  arb_manager_impl.rs  mod.rs  shard_manager.rs  shard_manager_impl.rs  shard_manager_opt.rs
app_main/: Cargo.toml  main-config.toml
app_main/src/: lib.rs  main.rs  result.rs
app_main/src/arb_client/: client_util.rs
app_main/src/handlers/: agent_handler.rs  auth_handler.rs  common_handler.rs  group_handler.rs  mod.rs  swagger.rs  user_handler.rs
app_main/src/protocol/: client_util.rs  common.rs  group_models.rs  mod.rs  rpc_arb_group.rs  rpc_arb_models.rs  rpc_arb_server.rs  rpc_group_models.rs
app_main/static/swagger-ui/: index.html
app_socket/: Cargo.toml  build.rs  socket-config.toml
app_socket/old/: group.proto  im_chat.proto  message.proto
app_socket/proto/: im_chat.proto
app_socket/src/: lib.rs  main.rs  server.rs
app_socket/src/handler/: auth_request_handler.rs  handle_connection.rs  heartbeat_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  socket_connection.rs
app_socket/src/kafka/: friend_msg.rs  kafka_consumer.rs  mod.rs
app_socket/src/manager/: job_manager.rs  mod.rs  socket_error.rs  socket_manager.rs  socket_server.rs
app_socket/src/pb/: message_util.rs  mod.rs  protocol.rs
app_socket/src/protocol/: mod.rs  rpc_arb_group.rs  rpc_arb_server.rs  rpc_arb_socket.rs
app_socket/src/scheduler/: job_cache_cleaner.rs  job_manager.rs  mod.rs
app_socket/src/socket/: heartbeat_handler.rs  mod.rs  socket_connection.rs  socket_manager.rs  socket_server.rs
biz_service/: Cargo.toml  build.rs
biz_service/proto/: auth.proto  common.proto  entity.proto  envelope.proto  friend.proto  group.proto  message.proto  status.proto  system.proto  user.proto
biz_service/src/: lib.rs
biz_service/src/biz_const/: mod.rs
biz_service/src/biz_service/: agent_service.rs  cache_service.rs  client_service.rs  country_service.rs  friend_event_service.rs  friend_service.rs  group_member_service.rs  group_operation_log_service.rs  group_service.rs  kafka_group_service.rs  kafka_service.rs  kafka_socket_service.rs  mail_service.rs  menu_service.rs  mod.rs  mq_group_application_service.rs  mq_group_operation_log_service.rs  mq_message_group_service.rs  mq_message_user_service.rs  mq_user_action_service.rs  permission_service.rs  role_permission_service.rs  role_service.rs  rpc_server_client_service.rs  user_friend_service.rs  user_role_service.rs  user_service.rs
biz_service/src/biz_services/: bucket_service.rs  file_service.rs  menu_service.rs  mod.rs  path_service.rs  role_menu_service.rs  role_service.rs  user_role_service.rs  user_service.rs
biz_service/src/entitys/: agent_entity.rs  bucket_entity.rs  client_entity.rs  common_entity.rs  config_entity.rs  file_entity.rs  friend.rs  group_entity.rs  group_join_request.rs  group_member.rs  group_member_entity.rs  group_msg_entity.rs  kafka_msg_entity.rs  mail_entity.rs  menu_entity.rs  mod.rs  model.rs  movie_info.rs  mq_group_application.rs  mq_group_operation_log.rs  mq_message_info.rs  mq_user_action.rs  path_entity.rs  permission_entity.rs  read_index.rs  role_entity.rs  role_menu_entity.rs  role_permission_entity.rs  user_entity.rs  user_friend.rs  user_msg_entity.rs  user_role_entity.rs
biz_service/src/kafka_util/: kafka_consumer.rs  node_util.rs
biz_service/src/manager/: common.rs  group_manager_core.rs  group_manager_impl.rs  group_redis_manager.rs  local_group_manager.rs  local_group_manager_impl.rs  mod.rs  user_manager.rs  user_manager_auth.rs  user_manager_auth_impl.rs  user_manager_core.rs  user_manager_impl.rs  user_manager_opt.rs  user_redis_manager.rs
biz_service/src/protocol/: auth.rs  common.rs  entity.rs  friend.rs  group.rs  message.rs  mod.rs  protocol_auth.rs  protocol_common.rs  status.rs  (+10 more)
common/: Cargo.toml  QueryBuild.md  readme.txt
common/src/: db.rs  errors.rs  lib.rs  schema.rs
(+258 files in other folders)
