[workspace]
resolver = "2"
members = ["common", "biz_service", "app_api", "app_job", "app_main", "macro", "app_socket"]
[workspace.dependencies]
actix-web = { version = "4.10.2" }
actix-service = { version = "2.0.3" }
actix-files = { version = "0.6.6" }
actix-redis = { version = "0.13.0" }
chrono = { version = "0.4.40" }
config = { version = "0.15.11" }
log = { version = "0.4.27" }
mongodb = { version = "3.2.3", features = ["sync"] }
mongo_indexed_derive = { version = "2.0.0" }
serde_json = { version = "1.0.140" }
futures = { version = "0.3.31" }
serde = { version = "1.0.219", features = ["derive"] }

redis = { version = "0.29.5", features = ["tokio-comp"] }
redis-stream={version = "0.1.2"}
deadpool-redis = { version = "0.20.0", features = ["tokio-comp"] }
tokio = { version = "1.44.2", features = ["full"] }
fxhash = { version = "0.2.1" }
async-trait = { version = "0.1.88" }
quote = { version = "1.0.40" }
syn = { version = "2.0.100" }
anyhow = { version = "1.0.97" }

thiserror = { version = "2.0.12" }
env_logger = { version = "0.11.8" }
utoipa = { version = "5.3.1" }
uuid = { version = "1.16.0" }
strum = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }
hex = "0.4.3"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = { version = "1.5.0" }
rustflake = { version = "0.1.1" }
walkdir = { version = "2.5.0" }
zip = { version = "2.6.1" }
tempfile = { version = "3.19.1" }
md-5 = "0.10.6"
tokio-util.version = "0.7.14"
prost = { version = "0.13.5" }
tonic = { version = "0.13.0" }
once_cell = { version = "1.21.3" }
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
sha1 = { version = "0.10.6" }
dashmap = { version = "6.1.0" }