[package]
name = "app_api"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
actix-web.workspace = true
serde_json.workspace = true
moka.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tracing.workspace = true
utoipa.workspace = true
anyhow.workspace = true
once_cell.workspace = true
futures-util.workspace = true
dashmap.workspace = true
chrono .workspace = true
[build-dependencies]
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.1"
prost-build = "0.14.1"