[package]
name = "app_biz_message"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
biz_service = { path = "../biz_service" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tracing.workspace = true
utoipa.workspace = true
anyhow.workspace = true
mongodb.workspace = true
once_cell.workspace = true
futures-util.workspace = true
chrono.workspace = true
actix-web.workspace = true
dashmap.workspace = true
rdkafka.workspace = true
bytes.workspace = true
env_logger.workspace = true
deadpool-redis.workspace = true
tokio-util = "0.7.15"
twox-hash.workspace = true
arc-swap.workspace = true
log = "0.4.27"
async-trait = "0.1.88"