[package]
name = "app_group"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tonic.version = "0.13.1"
prost.version = "0.13.1"
prost-types.workspace = true
serde.workspace = true
tracing.workspace = true
utoipa.workspace = true
anyhow.workspace = true
mongodb.workspace = true
once_cell.workspace = true
futures-util.workspace = true
chrono = "0.4.41"
[build-dependencies]
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.1"
prost-build = "0.14.1"
