[package]
name = "app_group_message"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
biz_service = { path = "../biz_service" }
actix-web.workspace = true
actix-service.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tracing.workspace = true
validator.workspace = true
regex.workspace = true
deadpool-redis.workspace = true

