[package]
name = "app_main"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
biz_service={path = "../biz_service"}
macro = {path = "../macro"}
actix-web.workspace = true
actix-files.workspace = true
actix-service.workspace = true
validator.workspace = true
config =  { workspace = true }
serde.workspace = true
serde_json.workspace = true
deadpool-redis.workspace = true

log.workspace = true
mongodb.workspace = true
env_logger.workspace = true
utoipa.workspace = true
anyhow.workspace = true

once_cell.workspace = true