[package]
name = "app_socket"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
biz_service={path = "../biz_service"}
prost .workspace = true
tonic .workspace = true
tokio.workspace = true
futures.workspace = true
pulsar.version = "6.3.1"
tokio-util.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-redis.workspace = true
config =  { workspace = true }
log.workspace = true
mongodb.workspace = true
env_logger.workspace = true
utoipa.workspace = true
anyhow.workspace = true
once_cell = "1.21.3"
dashmap = "7.0.0-rc2"
bytes = "1.10.1"
chrono = "0.4.40"
rdkafka.workspace = true
[build-dependencies]
prost-build = "0.12.6"
tonic-build = "0.13.0"
protobuf-src = { version = "^2.1.0", optional = true }
once_cell.workspace = true
