[package]
name = "app_socket"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
biz_core = { path = "../biz_core" }
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
futures.workspace = true
pulsar.version = "6.3.1"
tokio-util.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-redis.workspace = true
config = { workspace = true }
log.workspace = true
mongodb.workspace = true
env_logger.workspace = true
utoipa.workspace = true
anyhow.workspace = true
once_cell.workspace = true
dashmap.workspace = true
bytes.workspace = true
chrono = "0.4.40"
rdkafka.workspace = true
time.workspace = true
lazy_static.workspace = true
twox-hash = "2.1.1"
[build-dependencies]
regex = "1.11.1"
prost-build.version = "0.13.1"
tonic-build.version = "0.13.1"
protobuf-src = { version = "^2.1.0", optional = true }
once_cell.workspace = true
tonic = "0.13.1"
