[package]
name = "biz_service"
version = "0.1.0"
edition = "2024"

[dependencies]
common={path = "../common"}
actix-web.workspace = true
serde.workspace = true
mongodb.workspace = true
utoipa.workspace = true
strum.workspace = true
strum_macros.workspace = true
fxhash.workspace = true
chrono.workspace = true
validator.workspace = true
mongo_indexed_derive = { version = "2.0.0" }
log = "0.4.27"
async-trait = "0.1.88"
anyhow = "1.0.97"
once_cell.workspace = true
deadpool-redis.workspace = true
moka.workspace = true
sha1.workspace = true
serde_json = "1.0.140"
dashmap.workspace = true
tokio.workspace = true
uuid = "1.17.0"
rdkafka.workspace = true