[package]
name = "biz_service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
actix-web.workspace = true
serde.workspace = true
mongodb.workspace = true
utoipa.workspace = true
strum.workspace = true
strum_macros.workspace = true
fxhash.workspace = true
chrono.workspace = true
validator.workspace = true
mongo_indexed_derive = { version = "2.0.0" }
log = "0.4.27"
async-trait = "0.1.88"
anyhow = "1.0.97"
once_cell.workspace = true
deadpool-redis.workspace = true
moka.workspace = true
sha1.workspace = true
dashmap.workspace = true
tokio.workspace = true
uuid = "1.17.0"
rdkafka.workspace = true
futures-util = "0.3.31"
prost = "0.14.1"
serde_json = "1.0"
prost-types = "0.12"
bytes = "1.10.1"
[build-dependencies]
regex = "1.11.1"
prost-build = "0.14.1"
tonic-build = "0.13.1"
protobuf-src = { version = "^2.1.0", optional = true }
once_cell.workspace = true