[package]
name = "biz_service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
actix-web.workspace = true
serde.workspace = true
mongodb.workspace = true
utoipa.workspace = true
strum.workspace = true
strum_macros.workspace = true
chrono.workspace = true
validator.workspace = true
log.workspace = true
async-trait = "0.1.88"
anyhow.workspace = true
once_cell.workspace = true
deadpool-redis.workspace = true
moka.workspace = true
sha1.workspace = true
dashmap.workspace = true
tokio.workspace = true
rdkafka.workspace = true
futures-util.workspace = true
prost.workspace = true
serde_json.workspace = true
prost-types = "0.12"
twox-hash.workspace = true
bytes = "1.10.1"
[build-dependencies]
regex = "1.11.1"
prost-build.version = "0.13.1"
tonic-build.version = "0.13.1"
protobuf-src = { version = "^2.1.0", optional = true }
tonic = "0.13.1"
