[package]
name = "common"
version = "0.1.0"
edition = "2024"
[lib]
[dependencies]
mongodb.workspace = true
async-trait.workspace = true
quote.workspace = true
syn.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
deadpool-redis.workspace = true
actix-web.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true
env_logger.workspace = true
walkdir.workspace = true
tempfile.workspace = true
chrono.workspace = true
hex.workspace = true
md-5.workspace = true
uuid.workspace = true
utoipa.workspace = true
twox-hash.workspace = true
once_cell = "1.21.3"
config = { workspace = true }
validator.workspace = true